feat(app): update backend tests and frontend components